// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`WelcomeScreenTemplate renders correctly with en-US locale 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Welcome to Aurora!",
                  ],
                  "props": {
                    "style": [
                      {
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 24,
                        "marginBottom": 48,
                        "marginTop": 32,
                      },
                      {
                        "color": "rgba(98, 91, 113, 1)",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Aurora’s advanced software will help you improve dream recall, achieve sounder sleep,and accelerate your journey towards maximizing your potential. Sweet dreams!",
                  ],
                  "props": {
                    "onPress": undefined,
                    "style": [
                      {
                        "flex": 1,
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 16,
                      },
                      {
                        "color": "rgba(98, 91, 113, 1)",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            "Log In",
                                          ],
                                          "props": {
                                            "maxFontSizeMultiplier": undefined,
                                            "numberOfLines": 1,
                                            "ref": {
                                              "current": null,
                                            },
                                            "selectable": false,
                                            "style": [
                                              {
                                                "textAlign": "left",
                                              },
                                              {
                                                "color": "rgba(28, 27, 31, 1)",
                                                "writingDirection": "ltr",
                                              },
                                              [
                                                {
                                                  "fontFamily": "System",
                                                  "fontSize": 14,
                                                  "fontWeight": "500",
                                                  "letterSpacing": 0.1,
                                                  "lineHeight": 20,
                                                },
                                                [
                                                  {
                                                    "marginHorizontal": 16,
                                                    "marginVertical": 9,
                                                    "textAlign": "center",
                                                  },
                                                  false,
                                                  {
                                                    "marginHorizontal": 24,
                                                    "marginVertical": 10,
                                                  },
                                                  undefined,
                                                  false,
                                                  {
                                                    "color": "rgba(255, 255, 255, 1)",
                                                    "fontFamily": "System",
                                                    "fontSize": 14,
                                                    "fontWeight": "500",
                                                    "letterSpacing": 0.1,
                                                    "lineHeight": 20,
                                                  },
                                                  [
                                                    {
                                                      "fontFamily": "calibre_app_semibold",
                                                      "fontSize": 24,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ],
                                            ],
                                            "testID": "button-text",
                                          },
                                          "type": "Text",
                                        },
                                      ],
                                      "props": {
                                        "style": [
                                          {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "justifyContent": "center",
                                          },
                                          undefined,
                                        ],
                                      },
                                      "type": "View",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityHint": undefined,
                                    "accessibilityLabel": undefined,
                                    "accessibilityRole": "button",
                                    "accessibilityState": {
                                      "disabled": false,
                                    },
                                    "accessible": undefined,
                                    "delayLongPress": undefined,
                                    "disabled": false,
                                    "hitSlop": undefined,
                                    "onLongPress": undefined,
                                    "onPress": [class Function],
                                    "onPressIn": [Function],
                                    "onPressOut": [Function],
                                    "ref": null,
                                    "style": [Function],
                                    "testID": "button",
                                  },
                                  "type": "Pressable",
                                },
                              ],
                              "props": {
                                "needMargin": false,
                                "screenWidth": 400,
                                "style": {
                                  "0": {
                                    "borderRadius": 16,
                                    "height": 50,
                                    "marginBottom": 16,
                                    "marginTop": 16,
                                  },
                                  "1": {
                                    "width": 270,
                                  },
                                  "2": {
                                    "marginRight": undefined,
                                  },
                                  "backgroundColor": "#00ffe6",
                                  "borderColor": "transparent",
                                  "borderRadius": 16,
                                  "borderStyle": "solid",
                                  "borderWidth": 0,
                                  "flex": undefined,
                                  "minWidth": 64,
                                  "shadowColor": "#000",
                                  "shadowOffset": {
                                    "height": AnimatedValue {
                                      "_v": 0,
                                    },
                                    "width": 0,
                                  },
                                  "shadowOpacity": AnimatedValue {
                                    "_v": 0,
                                  },
                                  "shadowRadius": AnimatedValue {
                                    "_v": 0,
                                  },
                                },
                                "testID": "button-container",
                              },
                              "type": "Animated.View",
                            },
                          ],
                          "props": {
                            "ref": null,
                            "style": {
                              "backgroundColor": "#00ffe6",
                              "borderRadius": 16,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container-outer-layer",
                          },
                          "type": "Animated.View",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            "Sign Up",
                                          ],
                                          "props": {
                                            "maxFontSizeMultiplier": undefined,
                                            "numberOfLines": 1,
                                            "ref": {
                                              "current": null,
                                            },
                                            "selectable": false,
                                            "style": [
                                              {
                                                "textAlign": "left",
                                              },
                                              {
                                                "color": "rgba(28, 27, 31, 1)",
                                                "writingDirection": "ltr",
                                              },
                                              [
                                                {
                                                  "fontFamily": "System",
                                                  "fontSize": 14,
                                                  "fontWeight": "500",
                                                  "letterSpacing": 0.1,
                                                  "lineHeight": 20,
                                                },
                                                [
                                                  {
                                                    "marginHorizontal": 16,
                                                    "marginVertical": 9,
                                                    "textAlign": "center",
                                                  },
                                                  false,
                                                  {
                                                    "marginHorizontal": 24,
                                                    "marginVertical": 10,
                                                  },
                                                  undefined,
                                                  false,
                                                  {
                                                    "color": "rgba(255, 255, 255, 1)",
                                                    "fontFamily": "System",
                                                    "fontSize": 14,
                                                    "fontWeight": "500",
                                                    "letterSpacing": 0.1,
                                                    "lineHeight": 20,
                                                  },
                                                  [
                                                    {
                                                      "fontFamily": "calibre_app_semibold",
                                                      "fontSize": 24,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ],
                                            ],
                                            "testID": "button-text",
                                          },
                                          "type": "Text",
                                        },
                                      ],
                                      "props": {
                                        "style": [
                                          {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "justifyContent": "center",
                                          },
                                          undefined,
                                        ],
                                      },
                                      "type": "View",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityHint": undefined,
                                    "accessibilityLabel": undefined,
                                    "accessibilityRole": "button",
                                    "accessibilityState": {
                                      "disabled": false,
                                    },
                                    "accessible": undefined,
                                    "delayLongPress": undefined,
                                    "disabled": false,
                                    "hitSlop": undefined,
                                    "onLongPress": undefined,
                                    "onPress": [class Function],
                                    "onPressIn": [Function],
                                    "onPressOut": [Function],
                                    "ref": null,
                                    "style": [Function],
                                    "testID": "button",
                                  },
                                  "type": "Pressable",
                                },
                              ],
                              "props": {
                                "needMargin": false,
                                "screenWidth": 400,
                                "style": {
                                  "0": {
                                    "borderRadius": 16,
                                    "height": 50,
                                    "marginBottom": 16,
                                    "marginTop": 16,
                                  },
                                  "1": {
                                    "width": 270,
                                  },
                                  "2": {
                                    "marginLeft": undefined,
                                  },
                                  "backgroundColor": "#00ffe6",
                                  "borderColor": "transparent",
                                  "borderRadius": 16,
                                  "borderStyle": "solid",
                                  "borderWidth": 0,
                                  "flex": undefined,
                                  "minWidth": 64,
                                  "shadowColor": "#000",
                                  "shadowOffset": {
                                    "height": AnimatedValue {
                                      "_v": 0,
                                    },
                                    "width": 0,
                                  },
                                  "shadowOpacity": AnimatedValue {
                                    "_v": 0,
                                  },
                                  "shadowRadius": AnimatedValue {
                                    "_v": 0,
                                  },
                                },
                                "testID": "button-container",
                              },
                              "type": "Animated.View",
                            },
                          ],
                          "props": {
                            "ref": null,
                            "style": {
                              "backgroundColor": "#00ffe6",
                              "borderRadius": 16,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container-outer-layer",
                          },
                          "type": "Animated.View",
                        },
                      ],
                      "props": {
                        "style": {
                          "flexDirection": "column",
                        },
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        "StandAlone",
                                      ],
                                      "props": {
                                        "maxFontSizeMultiplier": undefined,
                                        "numberOfLines": 1,
                                        "ref": {
                                          "current": null,
                                        },
                                        "selectable": false,
                                        "style": [
                                          {
                                            "textAlign": "left",
                                          },
                                          {
                                            "color": "rgba(28, 27, 31, 1)",
                                            "writingDirection": "ltr",
                                          },
                                          [
                                            {
                                              "fontFamily": "System",
                                              "fontSize": 14,
                                              "fontWeight": "500",
                                              "letterSpacing": 0.1,
                                              "lineHeight": 20,
                                            },
                                            [
                                              {
                                                "marginHorizontal": 16,
                                                "marginVertical": 9,
                                                "textAlign": "center",
                                              },
                                              false,
                                              {
                                                "marginHorizontal": 24,
                                                "marginVertical": 10,
                                              },
                                              undefined,
                                              false,
                                              {
                                                "color": "rgba(255, 255, 255, 1)",
                                                "fontFamily": "System",
                                                "fontSize": 14,
                                                "fontWeight": "500",
                                                "letterSpacing": 0.1,
                                                "lineHeight": 20,
                                              },
                                              [
                                                {
                                                  "fontFamily": "calibre_app_semibold",
                                                  "fontSize": 24,
                                                },
                                                undefined,
                                              ],
                                            ],
                                          ],
                                        ],
                                        "testID": "button-text",
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "style": [
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      },
                                      undefined,
                                    ],
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "accessibilityHint": undefined,
                                "accessibilityLabel": undefined,
                                "accessibilityRole": "button",
                                "accessibilityState": {
                                  "disabled": false,
                                },
                                "accessible": undefined,
                                "delayLongPress": undefined,
                                "disabled": false,
                                "hitSlop": undefined,
                                "onLongPress": undefined,
                                "onPress": [class Function],
                                "onPressIn": [Function],
                                "onPressOut": [Function],
                                "ref": null,
                                "style": [Function],
                                "testID": "button",
                              },
                              "type": "Pressable",
                            },
                          ],
                          "props": {
                            "screenWidth": 400,
                            "style": {
                              "0": {
                                "borderRadius": 16,
                                "height": 50,
                                "marginBottom": 16,
                                "marginTop": 16,
                              },
                              "1": {
                                "width": 270,
                              },
                              "2": undefined,
                              "backgroundColor": "#00ffe6",
                              "borderColor": "transparent",
                              "borderRadius": 16,
                              "borderStyle": "solid",
                              "borderWidth": 0,
                              "flex": undefined,
                              "minWidth": 64,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container",
                          },
                          "type": "Animated.View",
                        },
                      ],
                      "props": {
                        "ref": null,
                        "style": {
                          "backgroundColor": "#00ffe6",
                          "borderRadius": 16,
                          "shadowColor": "#000",
                          "shadowOffset": {
                            "height": AnimatedValue {
                              "_v": 0,
                            },
                            "width": 0,
                          },
                          "shadowOpacity": AnimatedValue {
                            "_v": 0,
                          },
                          "shadowRadius": AnimatedValue {
                            "_v": 0,
                          },
                        },
                        "testID": "button-container-outer-layer",
                      },
                      "type": "Animated.View",
                    },
                  ],
                  "props": {
                    "style": {
                      "alignItems": "center",
                    },
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": [
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "space-between",
                    "marginLeft": 48,
                    "marginRight": 48,
                  },
                  {
                    "backgroundColor": "#070724",
                  },
                  [
                    {
                      "maxHeight": 650,
                      "maxWidth": 650,
                    },
                    undefined,
                  ],
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "onLayout": undefined,
            "style": [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#070724",
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`WelcomeScreenTemplate renders correctly with ja-JP locale 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Auroraにようこそ！",
                  ],
                  "props": {
                    "style": [
                      {
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 24,
                        "marginBottom": 48,
                        "marginTop": 32,
                      },
                      {
                        "color": "rgba(98, 91, 113, 1)",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "このソフトウェアは貴方のドリームリコールを向上させます。より良い睡眠を実現し、明晰夢を体験する可能性があがります。 良い夢を!",
                  ],
                  "props": {
                    "onPress": undefined,
                    "style": [
                      {
                        "flex": 1,
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 16,
                      },
                      {
                        "color": "rgba(98, 91, 113, 1)",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            "ログイン",
                                          ],
                                          "props": {
                                            "maxFontSizeMultiplier": undefined,
                                            "numberOfLines": 1,
                                            "ref": {
                                              "current": null,
                                            },
                                            "selectable": false,
                                            "style": [
                                              {
                                                "textAlign": "left",
                                              },
                                              {
                                                "color": "rgba(28, 27, 31, 1)",
                                                "writingDirection": "ltr",
                                              },
                                              [
                                                {
                                                  "fontFamily": "System",
                                                  "fontSize": 14,
                                                  "fontWeight": "500",
                                                  "letterSpacing": 0.1,
                                                  "lineHeight": 20,
                                                },
                                                [
                                                  {
                                                    "marginHorizontal": 16,
                                                    "marginVertical": 9,
                                                    "textAlign": "center",
                                                  },
                                                  false,
                                                  {
                                                    "marginHorizontal": 24,
                                                    "marginVertical": 10,
                                                  },
                                                  undefined,
                                                  false,
                                                  {
                                                    "color": "rgba(255, 255, 255, 1)",
                                                    "fontFamily": "System",
                                                    "fontSize": 14,
                                                    "fontWeight": "500",
                                                    "letterSpacing": 0.1,
                                                    "lineHeight": 20,
                                                  },
                                                  [
                                                    {
                                                      "fontFamily": "calibre_app_semibold",
                                                      "fontSize": 24,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ],
                                            ],
                                            "testID": "button-text",
                                          },
                                          "type": "Text",
                                        },
                                      ],
                                      "props": {
                                        "style": [
                                          {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "justifyContent": "center",
                                          },
                                          undefined,
                                        ],
                                      },
                                      "type": "View",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityHint": undefined,
                                    "accessibilityLabel": undefined,
                                    "accessibilityRole": "button",
                                    "accessibilityState": {
                                      "disabled": false,
                                    },
                                    "accessible": undefined,
                                    "delayLongPress": undefined,
                                    "disabled": false,
                                    "hitSlop": undefined,
                                    "onLongPress": undefined,
                                    "onPress": [class Function],
                                    "onPressIn": [Function],
                                    "onPressOut": [Function],
                                    "ref": null,
                                    "style": [Function],
                                    "testID": "button",
                                  },
                                  "type": "Pressable",
                                },
                              ],
                              "props": {
                                "needMargin": false,
                                "screenWidth": 400,
                                "style": {
                                  "0": {
                                    "borderRadius": 16,
                                    "height": 50,
                                    "marginBottom": 16,
                                    "marginTop": 16,
                                  },
                                  "1": {
                                    "width": 270,
                                  },
                                  "2": {
                                    "marginRight": undefined,
                                  },
                                  "backgroundColor": "#00ffe6",
                                  "borderColor": "transparent",
                                  "borderRadius": 16,
                                  "borderStyle": "solid",
                                  "borderWidth": 0,
                                  "flex": undefined,
                                  "minWidth": 64,
                                  "shadowColor": "#000",
                                  "shadowOffset": {
                                    "height": AnimatedValue {
                                      "_v": 0,
                                    },
                                    "width": 0,
                                  },
                                  "shadowOpacity": AnimatedValue {
                                    "_v": 0,
                                  },
                                  "shadowRadius": AnimatedValue {
                                    "_v": 0,
                                  },
                                },
                                "testID": "button-container",
                              },
                              "type": "Animated.View",
                            },
                          ],
                          "props": {
                            "ref": null,
                            "style": {
                              "backgroundColor": "#00ffe6",
                              "borderRadius": 16,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container-outer-layer",
                          },
                          "type": "Animated.View",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            "サインアップ",
                                          ],
                                          "props": {
                                            "maxFontSizeMultiplier": undefined,
                                            "numberOfLines": 1,
                                            "ref": {
                                              "current": null,
                                            },
                                            "selectable": false,
                                            "style": [
                                              {
                                                "textAlign": "left",
                                              },
                                              {
                                                "color": "rgba(28, 27, 31, 1)",
                                                "writingDirection": "ltr",
                                              },
                                              [
                                                {
                                                  "fontFamily": "System",
                                                  "fontSize": 14,
                                                  "fontWeight": "500",
                                                  "letterSpacing": 0.1,
                                                  "lineHeight": 20,
                                                },
                                                [
                                                  {
                                                    "marginHorizontal": 16,
                                                    "marginVertical": 9,
                                                    "textAlign": "center",
                                                  },
                                                  false,
                                                  {
                                                    "marginHorizontal": 24,
                                                    "marginVertical": 10,
                                                  },
                                                  undefined,
                                                  false,
                                                  {
                                                    "color": "rgba(255, 255, 255, 1)",
                                                    "fontFamily": "System",
                                                    "fontSize": 14,
                                                    "fontWeight": "500",
                                                    "letterSpacing": 0.1,
                                                    "lineHeight": 20,
                                                  },
                                                  [
                                                    {
                                                      "fontFamily": "calibre_app_semibold",
                                                      "fontSize": 24,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ],
                                            ],
                                            "testID": "button-text",
                                          },
                                          "type": "Text",
                                        },
                                      ],
                                      "props": {
                                        "style": [
                                          {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "justifyContent": "center",
                                          },
                                          undefined,
                                        ],
                                      },
                                      "type": "View",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityHint": undefined,
                                    "accessibilityLabel": undefined,
                                    "accessibilityRole": "button",
                                    "accessibilityState": {
                                      "disabled": false,
                                    },
                                    "accessible": undefined,
                                    "delayLongPress": undefined,
                                    "disabled": false,
                                    "hitSlop": undefined,
                                    "onLongPress": undefined,
                                    "onPress": [class Function],
                                    "onPressIn": [Function],
                                    "onPressOut": [Function],
                                    "ref": null,
                                    "style": [Function],
                                    "testID": "button",
                                  },
                                  "type": "Pressable",
                                },
                              ],
                              "props": {
                                "needMargin": false,
                                "screenWidth": 400,
                                "style": {
                                  "0": {
                                    "borderRadius": 16,
                                    "height": 50,
                                    "marginBottom": 16,
                                    "marginTop": 16,
                                  },
                                  "1": {
                                    "width": 270,
                                  },
                                  "2": {
                                    "marginLeft": undefined,
                                  },
                                  "backgroundColor": "#00ffe6",
                                  "borderColor": "transparent",
                                  "borderRadius": 16,
                                  "borderStyle": "solid",
                                  "borderWidth": 0,
                                  "flex": undefined,
                                  "minWidth": 64,
                                  "shadowColor": "#000",
                                  "shadowOffset": {
                                    "height": AnimatedValue {
                                      "_v": 0,
                                    },
                                    "width": 0,
                                  },
                                  "shadowOpacity": AnimatedValue {
                                    "_v": 0,
                                  },
                                  "shadowRadius": AnimatedValue {
                                    "_v": 0,
                                  },
                                },
                                "testID": "button-container",
                              },
                              "type": "Animated.View",
                            },
                          ],
                          "props": {
                            "ref": null,
                            "style": {
                              "backgroundColor": "#00ffe6",
                              "borderRadius": 16,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container-outer-layer",
                          },
                          "type": "Animated.View",
                        },
                      ],
                      "props": {
                        "style": {
                          "flexDirection": "column",
                        },
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        "スタンドアローン",
                                      ],
                                      "props": {
                                        "maxFontSizeMultiplier": undefined,
                                        "numberOfLines": 1,
                                        "ref": {
                                          "current": null,
                                        },
                                        "selectable": false,
                                        "style": [
                                          {
                                            "textAlign": "left",
                                          },
                                          {
                                            "color": "rgba(28, 27, 31, 1)",
                                            "writingDirection": "ltr",
                                          },
                                          [
                                            {
                                              "fontFamily": "System",
                                              "fontSize": 14,
                                              "fontWeight": "500",
                                              "letterSpacing": 0.1,
                                              "lineHeight": 20,
                                            },
                                            [
                                              {
                                                "marginHorizontal": 16,
                                                "marginVertical": 9,
                                                "textAlign": "center",
                                              },
                                              false,
                                              {
                                                "marginHorizontal": 24,
                                                "marginVertical": 10,
                                              },
                                              undefined,
                                              false,
                                              {
                                                "color": "rgba(255, 255, 255, 1)",
                                                "fontFamily": "System",
                                                "fontSize": 14,
                                                "fontWeight": "500",
                                                "letterSpacing": 0.1,
                                                "lineHeight": 20,
                                              },
                                              [
                                                {
                                                  "fontFamily": "calibre_app_semibold",
                                                  "fontSize": 24,
                                                },
                                                undefined,
                                              ],
                                            ],
                                          ],
                                        ],
                                        "testID": "button-text",
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "style": [
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      },
                                      undefined,
                                    ],
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "accessibilityHint": undefined,
                                "accessibilityLabel": undefined,
                                "accessibilityRole": "button",
                                "accessibilityState": {
                                  "disabled": false,
                                },
                                "accessible": undefined,
                                "delayLongPress": undefined,
                                "disabled": false,
                                "hitSlop": undefined,
                                "onLongPress": undefined,
                                "onPress": [class Function],
                                "onPressIn": [Function],
                                "onPressOut": [Function],
                                "ref": null,
                                "style": [Function],
                                "testID": "button",
                              },
                              "type": "Pressable",
                            },
                          ],
                          "props": {
                            "screenWidth": 400,
                            "style": {
                              "0": {
                                "borderRadius": 16,
                                "height": 50,
                                "marginBottom": 16,
                                "marginTop": 16,
                              },
                              "1": {
                                "width": 270,
                              },
                              "2": undefined,
                              "backgroundColor": "#00ffe6",
                              "borderColor": "transparent",
                              "borderRadius": 16,
                              "borderStyle": "solid",
                              "borderWidth": 0,
                              "flex": undefined,
                              "minWidth": 64,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container",
                          },
                          "type": "Animated.View",
                        },
                      ],
                      "props": {
                        "ref": null,
                        "style": {
                          "backgroundColor": "#00ffe6",
                          "borderRadius": 16,
                          "shadowColor": "#000",
                          "shadowOffset": {
                            "height": AnimatedValue {
                              "_v": 0,
                            },
                            "width": 0,
                          },
                          "shadowOpacity": AnimatedValue {
                            "_v": 0,
                          },
                          "shadowRadius": AnimatedValue {
                            "_v": 0,
                          },
                        },
                        "testID": "button-container-outer-layer",
                      },
                      "type": "Animated.View",
                    },
                  ],
                  "props": {
                    "style": {
                      "alignItems": "center",
                    },
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": [
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "space-between",
                    "marginLeft": 48,
                    "marginRight": 48,
                  },
                  {
                    "backgroundColor": "#070724",
                  },
                  [
                    {
                      "maxHeight": 650,
                      "maxWidth": 650,
                    },
                    undefined,
                  ],
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "onLayout": undefined,
            "style": [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#070724",
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`WelcomeScreenTemplate renders correctly in desktop mode 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Welcome to Aurora!",
                  ],
                  "props": {
                    "style": [
                      {
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 24,
                        "marginBottom": 48,
                        "marginTop": 32,
                      },
                      {
                        "color": "rgba(98, 91, 113, 1)",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Aurora’s advanced software will help you improve dream recall, achieve sounder sleep,and accelerate your journey towards maximizing your potential. Sweet dreams!",
                  ],
                  "props": {
                    "onPress": undefined,
                    "style": [
                      {
                        "flex": 1,
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 16,
                      },
                      {
                        "color": "rgba(98, 91, 113, 1)",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            "Log In",
                                          ],
                                          "props": {
                                            "maxFontSizeMultiplier": undefined,
                                            "numberOfLines": 1,
                                            "ref": {
                                              "current": null,
                                            },
                                            "selectable": false,
                                            "style": [
                                              {
                                                "textAlign": "left",
                                              },
                                              {
                                                "color": "rgba(28, 27, 31, 1)",
                                                "writingDirection": "ltr",
                                              },
                                              [
                                                {
                                                  "fontFamily": "System",
                                                  "fontSize": 14,
                                                  "fontWeight": "500",
                                                  "letterSpacing": 0.1,
                                                  "lineHeight": 20,
                                                },
                                                [
                                                  {
                                                    "marginHorizontal": 16,
                                                    "marginVertical": 9,
                                                    "textAlign": "center",
                                                  },
                                                  false,
                                                  {
                                                    "marginHorizontal": 24,
                                                    "marginVertical": 10,
                                                  },
                                                  undefined,
                                                  false,
                                                  {
                                                    "color": "rgba(255, 255, 255, 1)",
                                                    "fontFamily": "System",
                                                    "fontSize": 14,
                                                    "fontWeight": "500",
                                                    "letterSpacing": 0.1,
                                                    "lineHeight": 20,
                                                  },
                                                  [
                                                    {
                                                      "fontFamily": "calibre_app_semibold",
                                                      "fontSize": 24,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ],
                                            ],
                                            "testID": "button-text",
                                          },
                                          "type": "Text",
                                        },
                                      ],
                                      "props": {
                                        "style": [
                                          {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "justifyContent": "center",
                                          },
                                          undefined,
                                        ],
                                      },
                                      "type": "View",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityHint": undefined,
                                    "accessibilityLabel": undefined,
                                    "accessibilityRole": "button",
                                    "accessibilityState": {
                                      "disabled": false,
                                    },
                                    "accessible": undefined,
                                    "delayLongPress": undefined,
                                    "disabled": false,
                                    "hitSlop": undefined,
                                    "onLongPress": undefined,
                                    "onPress": [class Function],
                                    "onPressIn": [Function],
                                    "onPressOut": [Function],
                                    "ref": null,
                                    "style": [Function],
                                    "testID": "button",
                                  },
                                  "type": "Pressable",
                                },
                              ],
                              "props": {
                                "needMargin": true,
                                "screenWidth": 1400,
                                "style": {
                                  "0": {
                                    "borderRadius": 16,
                                    "height": 50,
                                    "marginBottom": 16,
                                    "marginTop": 16,
                                  },
                                  "1": {
                                    "width": 270,
                                  },
                                  "2": {
                                    "marginRight": 8,
                                  },
                                  "backgroundColor": "#00ffe6",
                                  "borderColor": "transparent",
                                  "borderRadius": 16,
                                  "borderStyle": "solid",
                                  "borderWidth": 0,
                                  "flex": undefined,
                                  "minWidth": 64,
                                  "shadowColor": "#000",
                                  "shadowOffset": {
                                    "height": AnimatedValue {
                                      "_v": 0,
                                    },
                                    "width": 0,
                                  },
                                  "shadowOpacity": AnimatedValue {
                                    "_v": 0,
                                  },
                                  "shadowRadius": AnimatedValue {
                                    "_v": 0,
                                  },
                                },
                                "testID": "button-container",
                              },
                              "type": "Animated.View",
                            },
                          ],
                          "props": {
                            "ref": null,
                            "style": {
                              "backgroundColor": "#00ffe6",
                              "borderRadius": 16,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container-outer-layer",
                          },
                          "type": "Animated.View",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        {
                                          "$$typeof": Symbol(react.test.json),
                                          "children": [
                                            "Sign Up",
                                          ],
                                          "props": {
                                            "maxFontSizeMultiplier": undefined,
                                            "numberOfLines": 1,
                                            "ref": {
                                              "current": null,
                                            },
                                            "selectable": false,
                                            "style": [
                                              {
                                                "textAlign": "left",
                                              },
                                              {
                                                "color": "rgba(28, 27, 31, 1)",
                                                "writingDirection": "ltr",
                                              },
                                              [
                                                {
                                                  "fontFamily": "System",
                                                  "fontSize": 14,
                                                  "fontWeight": "500",
                                                  "letterSpacing": 0.1,
                                                  "lineHeight": 20,
                                                },
                                                [
                                                  {
                                                    "marginHorizontal": 16,
                                                    "marginVertical": 9,
                                                    "textAlign": "center",
                                                  },
                                                  false,
                                                  {
                                                    "marginHorizontal": 24,
                                                    "marginVertical": 10,
                                                  },
                                                  undefined,
                                                  false,
                                                  {
                                                    "color": "rgba(255, 255, 255, 1)",
                                                    "fontFamily": "System",
                                                    "fontSize": 14,
                                                    "fontWeight": "500",
                                                    "letterSpacing": 0.1,
                                                    "lineHeight": 20,
                                                  },
                                                  [
                                                    {
                                                      "fontFamily": "calibre_app_semibold",
                                                      "fontSize": 24,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ],
                                            ],
                                            "testID": "button-text",
                                          },
                                          "type": "Text",
                                        },
                                      ],
                                      "props": {
                                        "style": [
                                          {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "justifyContent": "center",
                                          },
                                          undefined,
                                        ],
                                      },
                                      "type": "View",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityHint": undefined,
                                    "accessibilityLabel": undefined,
                                    "accessibilityRole": "button",
                                    "accessibilityState": {
                                      "disabled": false,
                                    },
                                    "accessible": undefined,
                                    "delayLongPress": undefined,
                                    "disabled": false,
                                    "hitSlop": undefined,
                                    "onLongPress": undefined,
                                    "onPress": [class Function],
                                    "onPressIn": [Function],
                                    "onPressOut": [Function],
                                    "ref": null,
                                    "style": [Function],
                                    "testID": "button",
                                  },
                                  "type": "Pressable",
                                },
                              ],
                              "props": {
                                "needMargin": true,
                                "screenWidth": 1400,
                                "style": {
                                  "0": {
                                    "borderRadius": 16,
                                    "height": 50,
                                    "marginBottom": 16,
                                    "marginTop": 16,
                                  },
                                  "1": {
                                    "width": 270,
                                  },
                                  "2": {
                                    "marginLeft": 8,
                                  },
                                  "backgroundColor": "#00ffe6",
                                  "borderColor": "transparent",
                                  "borderRadius": 16,
                                  "borderStyle": "solid",
                                  "borderWidth": 0,
                                  "flex": undefined,
                                  "minWidth": 64,
                                  "shadowColor": "#000",
                                  "shadowOffset": {
                                    "height": AnimatedValue {
                                      "_v": 0,
                                    },
                                    "width": 0,
                                  },
                                  "shadowOpacity": AnimatedValue {
                                    "_v": 0,
                                  },
                                  "shadowRadius": AnimatedValue {
                                    "_v": 0,
                                  },
                                },
                                "testID": "button-container",
                              },
                              "type": "Animated.View",
                            },
                          ],
                          "props": {
                            "ref": null,
                            "style": {
                              "backgroundColor": "#00ffe6",
                              "borderRadius": 16,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container-outer-layer",
                          },
                          "type": "Animated.View",
                        },
                      ],
                      "props": {
                        "style": {
                          "flexDirection": "row",
                        },
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        "StandAlone",
                                      ],
                                      "props": {
                                        "maxFontSizeMultiplier": undefined,
                                        "numberOfLines": 1,
                                        "ref": {
                                          "current": null,
                                        },
                                        "selectable": false,
                                        "style": [
                                          {
                                            "textAlign": "left",
                                          },
                                          {
                                            "color": "rgba(28, 27, 31, 1)",
                                            "writingDirection": "ltr",
                                          },
                                          [
                                            {
                                              "fontFamily": "System",
                                              "fontSize": 14,
                                              "fontWeight": "500",
                                              "letterSpacing": 0.1,
                                              "lineHeight": 20,
                                            },
                                            [
                                              {
                                                "marginHorizontal": 16,
                                                "marginVertical": 9,
                                                "textAlign": "center",
                                              },
                                              false,
                                              {
                                                "marginHorizontal": 24,
                                                "marginVertical": 10,
                                              },
                                              undefined,
                                              false,
                                              {
                                                "color": "rgba(255, 255, 255, 1)",
                                                "fontFamily": "System",
                                                "fontSize": 14,
                                                "fontWeight": "500",
                                                "letterSpacing": 0.1,
                                                "lineHeight": 20,
                                              },
                                              [
                                                {
                                                  "fontFamily": "calibre_app_semibold",
                                                  "fontSize": 24,
                                                },
                                                undefined,
                                              ],
                                            ],
                                          ],
                                        ],
                                        "testID": "button-text",
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "style": [
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      },
                                      undefined,
                                    ],
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "accessibilityHint": undefined,
                                "accessibilityLabel": undefined,
                                "accessibilityRole": "button",
                                "accessibilityState": {
                                  "disabled": false,
                                },
                                "accessible": undefined,
                                "delayLongPress": undefined,
                                "disabled": false,
                                "hitSlop": undefined,
                                "onLongPress": undefined,
                                "onPress": [class Function],
                                "onPressIn": [Function],
                                "onPressOut": [Function],
                                "ref": null,
                                "style": [Function],
                                "testID": "button",
                              },
                              "type": "Pressable",
                            },
                          ],
                          "props": {
                            "screenWidth": 1400,
                            "style": {
                              "0": {
                                "borderRadius": 16,
                                "height": 50,
                                "marginBottom": 16,
                                "marginTop": 16,
                              },
                              "1": {
                                "width": 270,
                              },
                              "2": undefined,
                              "backgroundColor": "#00ffe6",
                              "borderColor": "transparent",
                              "borderRadius": 16,
                              "borderStyle": "solid",
                              "borderWidth": 0,
                              "flex": undefined,
                              "minWidth": 64,
                              "shadowColor": "#000",
                              "shadowOffset": {
                                "height": AnimatedValue {
                                  "_v": 0,
                                },
                                "width": 0,
                              },
                              "shadowOpacity": AnimatedValue {
                                "_v": 0,
                              },
                              "shadowRadius": AnimatedValue {
                                "_v": 0,
                              },
                            },
                            "testID": "button-container",
                          },
                          "type": "Animated.View",
                        },
                      ],
                      "props": {
                        "ref": null,
                        "style": {
                          "backgroundColor": "#00ffe6",
                          "borderRadius": 16,
                          "shadowColor": "#000",
                          "shadowOffset": {
                            "height": AnimatedValue {
                              "_v": 0,
                            },
                            "width": 0,
                          },
                          "shadowOpacity": AnimatedValue {
                            "_v": 0,
                          },
                          "shadowRadius": AnimatedValue {
                            "_v": 0,
                          },
                        },
                        "testID": "button-container-outer-layer",
                      },
                      "type": "Animated.View",
                    },
                  ],
                  "props": {
                    "style": {
                      "alignItems": "center",
                    },
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": [
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "space-between",
                    "marginLeft": 48,
                    "marginRight": 48,
                  },
                  {
                    "backgroundColor": "#070724",
                  },
                  [
                    {
                      "maxHeight": 650,
                      "maxWidth": 650,
                    },
                    undefined,
                  ],
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "onLayout": undefined,
            "style": [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#070724",
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;
